# noahfarr.github.io

./: .prettierignore  404.html  CNAME  Gemfile  README.md  _config.yml  about.md  cv.md  feed.xml  index.html  projects.html  robots.txt  sitemap.xml
.github/workflows/: broken-links.yml  deploy.yml
_bibliography/: apa-bracket.csl  papers.bib  references.bib
_data/: cv.yml  repositories.yml
_includes/: site-footer.html  site-nav.html
_includes/cv/: time_table.liquid
_includes/repository/: repo.liquid
_includes/scripts/: search.liquid
_news/: 2026-01-15-softmax.md  2026-05-01-arxiv.md  2026-05-20-best-paper.md
_pages/: about.md  cv.md  projects.md  repositories.md
_posts/: 2024-02-11-hello-world.markdown  2024-02-11-welcome-to-jekyll.markdown  2024-02-12-post2.md  2026-05-12-streaming-rl-remembering-without-a-replay-buffer.md  2026-07-05-cleo-cross-attention-for-leo.md  2026-07-05-streaming-rl-remembering-without-a-replay-buffer.md  2026-07-20-not-every-token-is-an-action.md
_projects/: auto_ml.md  jax3d.md  mcts.md  rlx.md
_sass/: _base.scss
assets/: styles.scss
assets/css/: bootstrap.min.css  jekyll-pygments-themes-github.css  jekyll-pygments-themes-native.css  main.css  main.css.map
assets/jax3d/: init_state.json  layout.json  scene.json  step.mlir
blog/: index.html
blog/2015/: index.html
cv/: index.html
news/: index.html
projects/: index.html
publications/: index.html
repositories/: index.html
tools/whlo/: README.md  export_jax3d.py  export_mcts.py  export_ppo_wordle.py  generate_reference.py  pyproject.toml  verify_render.mjs
(+131 files in other folders)
